spade-tests/src/snapshots/spade_tests__hir_lowering__tests__single_missing_enum_branch_errors.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: pattern X::B not covered
  ┌─ testinput:7:5
  │  
7 │ ╭     match x {
8 │ │         X::A => true,
9 │ │     }
  │ ╰─────^ pattern X::B not covered


